Terraform/jenkins_master.tf
# resource "aws_instance" "jenkins-master" {
#   ami = "ami-053b0d53c279acc90"
#   instance_type = "t2.micro"
#   key_name = "project_gtak"
# }
